# c.openmp

./: CMakeLists.txt  README.md  item1.cpp  item2.cpp  item3.cpp  item4.cpp  item5.cpp  实验报告.docx
