# cmake_minimum_required(VERSION <specify CMake version here>)
project(untitled)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-fopenmp")

#add_executable(untitled item1.cpp)
#add_executable(untitled item2.cpp)
#add_executable(untitled item3.cpp)
#add_executable(untitled item4.cpp)
add_executable(untitled item5.cpp)


